--- a/backup/我是奶龙.md
+++ b/backup/我是奶龙.md
@@ -7,19 +7,19 @@
 我爱你的心暖暖🤮🤮🤮
 想你一晚又一晚🫣🫣🫣
 把爱你的心填满❤️❤️❤️
-享受爱情的苦😍😍😍
+想吃爱情的苦😍😍😍
 做你的小公主🙄🙄🙄
 月亮不睡我不睡🌘🌗🌕
 我是你的小美味~~~
 😡(霸道音)
 先擦鼻涕后提裤🤗🤗🤗
-后提裤~后提裤~😉😉😉
+后提裤后提裤~😉😉😉
 从此走向社会步😜😜😜
-啊，社会步~啊，社会步~🤒🤒🤒
+啊，社会步啊，社会步~🤒🤒🤒
 先擦鼻涕后提裤🤐🤐🤐
 先擦鼻涕后提裤😄😄😄
-从此~走向社会路🤓🤓🤓
-从此走向---社会愧
+从此走向社会路🤓🤓🤓
+从此走向 噶累
 (音乐)......
 （萝莉音）
 今夜星光闪闪~~~
